# scriptbench

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  unfilled.csv
archive/: turkish_review_sentiment_classification.yaml
archive/turkish_review_sentiment_classification/: clean.py  filled.csv
files/agentic_reddit_post_checker/: server.py  solver.py
files/chess_move_validation/: chess_generator.py  complete_games.csv  incomplete_games.csv
files/count_video_length/: oracle.py  script.py
files/counting_items_server/: server.py
files/imdb_movie_sentiment_classification/: filled.csv  unfilled.csv
files/log_date_counting/: oracle.py  script.py
files/multi_commodity_logistics/: customer_demand.csv  factories.csv  generator.py  handling_costs.csv  solver.py  transport_costs.csv  warehouses.csv
files/multiplication_homework_checker/: generate_multiplication_homework.py  multiplication_homework.docx
files/pokemon_type_effectiveness/: filled.csv  type_chart_maker.py  (+1 more)
tasks/: agentic_reddit_post_checker.yaml  chess_move_validation.yaml  count_video_length.yaml  counting_items_server.yaml  imdb_movie_sentiment_classification.yaml  log_date_counting.yaml  multi_commodity_logistics.yaml  multiplication_homework_checker.yaml  pokemon_type_effectiveness.yaml  pythonic_smell_checker.yaml  read_photo_exifs.yaml  script_reddit_post_checker.yaml  solve_geometric_problem.yaml  spotify_track_id_checking.yaml  student_gpa_calculation.yaml  table_counting_easy.yaml  table_counting_medium.yaml  tile_based_game_simulation.yaml  youtube_video_downloading.yaml
(+45 files in other folders)
